k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
