k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
          - path: /employees
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
